--- a/collective/navigationtoggle/locales/collective.navigationtoggle.pot
+++ b/collective/navigationtoggle/locales/collective.navigationtoggle.pot
@@ -73,7 +73,7 @@ msgstr ""
 msgid "Toggle container classes"
 msgstr ""
 
-#. Default: "If provided, enable an animation when navigations are expanded/collapsed\n.Animation will require the given number of missilecons to be completed.\nLeave 0 to disable animation."
+#. Default: "If provided, enable an animation when navigations are expanded/collapsed.\nAnimation will require the given number of missilecons to be completed.\nLeave 0 to disable animation."
 #: ../interfaces.py:31
 msgid "help_animation_delay"
 msgstr ""
@@ -88,7 +88,7 @@ msgstr ""
 msgid "help_link_selectors"
 msgstr ""
 
-#. Default: "The item of a single list entry to looks for inside navigations.\nThis is the element that the toggle feature will generate when expandig."
+#. Default: "The item of a single list entry to looks for inside navigations.\nThis is the element that the toggle feature will generate when expanding."
 #: ../interfaces.py:72
 msgid "help_list_item"
 msgstr ""
