--- a/collective/navigationtoggle/locales/it/LC_MESSAGES/collective.navigationtoggle.po
+++ b/collective/navigationtoggle/locales/it/LC_MESSAGES/collective.navigationtoggle.po
@@ -73,7 +73,7 @@ msgstr "Salva e invalida cache JS"
 msgid "Toggle container classes"
 msgstr "Classi dei contenitori per elementi toggle"
 
-#. Default: "If provided, enable an animation when navigations are expanded/collapsed\n.Animation will require the given number of missilecons to be completed.\nLeave 0 to disable animation."
+#. Default: "If provided, enable an animation when navigations are expanded/collapsed.\nAnimation will require the given number of missilecons to be completed.\nLeave 0 to disable animation."
 #: ../interfaces.py:31
 msgid "help_animation_delay"
 msgstr ""
@@ -94,7 +94,7 @@ msgstr ""
 "Puoi fornite il percorso relativo dell'URL (omettendo l'id del sito) - e.g: \"/cartella/sottocartella\".\n"
 "Puoi anche utilizzare un selettore jQuery standard (vedere http://api.jquery.com/category/selectors)."
 
-#. Default: "The item of a single list entry to looks for inside navigations.\nThis is the element that the toggle feature will generate when expandig."
+#. Default: "The item of a single list entry to looks for inside navigations.\nThis is the element that the toggle feature will generate when expanding."
 #: ../interfaces.py:72
 msgid "help_list_item"
 msgstr ""
